--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.2.0"
+    "tailwind-merge": "^3.2.0",
+    "tailwind-scrollbar": "^4.0.2",
+    "tailwindcss-scrollbar": "^0.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
