--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.13",
     "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-tabs": "^1.1.11",
     "@studio-freight/lenis": "^1.0.42",
     "@tsparticles/engine": "^3.8.1",
     "@tsparticles/react": "^3.0.0",
@@ -28,7 +29,8 @@
     "simplex-noise": "^4.0.3",
     "tailwind-merge": "^3.2.0",
     "tailwind-scrollbar": "^4.0.2",
-    "tailwindcss-scrollbar": "^0.1.0"
+    "tailwindcss-scrollbar": "^0.1.0",
+    "vaul": "^1.1.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
