--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^3.9.1",
     "@radix-ui/react-dialog": "^1.1.13",
     "@radix-ui/react-navigation-menu": "^1.2.12",
     "@radix-ui/react-slot": "^1.2.0",
@@ -23,8 +24,11 @@
     "framer-motion": "^12.9.2",
     "lenis": "^1.3.1",
     "lucide-react": "^0.503.0",
-    "motion": "^12.10.0",
+    "mongodb": "^6.16.0",
+    "mongoose": "^8.15.0",
+    "motion": "^12.12.1",
     "next": "15.3.1",
+    "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "simplex-noise": "^4.0.3",
