--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-navigation-menu": "^1.2.12",
     "@radix-ui/react-slot": "^1.2.2",
     "@radix-ui/react-tabs": "^1.1.11",
+    "@react-three/fiber": "^9.0.0-alpha.8",
     "@studio-freight/lenis": "^1.0.42",
     "@tanstack/react-query": "^5.76.1",
     "@tsparticles/engine": "^3.8.1",
@@ -42,6 +43,7 @@
     "tailwind-merge": "^3.2.0",
     "tailwind-scrollbar": "^4.0.2",
     "tailwindcss-scrollbar": "^0.1.0",
+    "three": "^0.176.0",
     "vaul": "^1.1.2",
     "zod": "^3.25.7"
   },
@@ -52,6 +54,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/three": "^0.176.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
     "tailwindcss": "^4",
