--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
+    "react-icons": "^5.5.0",
     "simplex-noise": "^4.0.3",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
